Media Query Table Align Fix

--- a/VSProjects/APP-FrontEnd/APP-FrontEnd/wwwroot/css/site.css
+++ b/VSProjects/APP-FrontEnd/APP-FrontEnd/wwwroot/css/site.css
@@ -275,6 +275,7 @@ td {
     .table__content {
         display: block;
         padding: .5rem 0;
+        text-align: left !important;
     }
 
     .table__row {
